--- a/index.html
+++ b/index.html
@@ -4,8 +4,14 @@
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
+    <title>Richard Ellis</title>
   </head>
   <body>
-
+    <h1>Hello, Pluralsight!</h1>
+    <ul>
+      <li>Micro-services</li>
+      <li>WPF</li>
+      <li>More React</li>
+    </ul>
   </body>
 </html>
